# mk

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  mk.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs  opts.rs  task.rs  util.rs
