[package]
name = "mk"
version = "2.0.1"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.5"
clap = { version = "4.5.1", features = ["derive"] }
termion = "3.0.0"
